--- a/src/app/shared/hashtag/hashtag.component.scss
+++ b/src/app/shared/hashtag/hashtag.component.scss
@@ -1,8 +1,10 @@
-.tag * {
-    height: 30pt;
-    left: 0;
-    top: 0;
-}
+.tag {
+    
+    * {
+        height: 30pt;
+        left: 0;
+        top: 0;
+    }
     .tag-left {
         width: 8pt;
         background-image: url("~/app/assets/images/shadow_left.png");
@@ -19,12 +21,13 @@
         padding: 2pt 10pt 0 10pt;
         color: rgba(30, 39, 46, 0.8);
     }
-    .tag .tag-text-active {
+    .tag-text-active {
         left: 4pt;
         top: 0;
-        font-size: 14pt;
         border-radius: 3pt;
         padding: 2pt 6pt 0 6pt;
         height: 24pt;
+        font-size: 14pt;
         color: white;
     }
+}
